# typeforge

./: .gitignore  README.md  pyproject.toml
src/typeforge/: __init__.py
src/typeforge/jinja_context_builder/: __init__.py  context.py  filters.py
src/typeforge/jinja_context_builder/providers/: __init__.py  arcgis.py
src/typeforge/utils/: ui.py
tests/: arcgis_online.py  test_context.py
